# rag-forensics

./: .gitignore  ADR.md  README.md  README_INTEGRATION.md
backend/: main.py  models.py  pyproject.toml
backend/prompts/: generation_prompts.py  hedging_prompts.py  query_fit_prompts.py  recommendation_rules.py  verdict_prompts.py
backend/routers/: analyze.py  example.py
backend/scripts/: bootstrap_data.py
backend/services/: generator.py  ragas_scorer.py  retriever.py  verdict_generator.py
backend/services/forensics/: chunk_attribution.py  embedding_analysis.py  hedging_mismatch.py  query_corpus_fit.py  retrieval_distribution.py
backend/tests/: test_analyze.py  test_example.py  test_generator.py  test_ragas_scorer.py  test_retriever.py  test_verdict_generator.py
backend/tests/test_forensics/: test_chunk_attribution.py  test_embedding_analysis.py  test_hedging_mismatch.py  test_query_corpus_fit.py  test_retrieval_distribution.py
frontend/: package-lock.json  package.json
frontend/__tests__/: ExampleBrowser.test.tsx
frontend/app/: page.tsx
frontend/app/components/: ExampleBrowser.tsx
frontend/lib/: api.ts
