[project]
name = "rag-forensics-backend"
version = "0.1.0"
description = "Forensics layer for RAG evaluation"
authors = [
    {name = "Srilakshmi Medarametla",email = "meds31510@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "datasets (>=4.8.4,<5.0.0)",
    "chromadb (>=1.5.5,<2.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)",
    "ragas (>=0.4.3,<0.5.0)",
    "langchain-anthropic (>=1.4.0,<2.0.0)",
    "anthropic (>=0.86.0,<0.87.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
